--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"lint:js": "wp-scripts lint-js",
 		"packages-update": "wp-scripts packages-update",
 		"plugin-zip": "wp-scripts plugin-zip",
-		"start": "wp-scripts start"
+		"start": "wp-scripts start",
+		"create": "node ./utils/create-acf-block.js"
 	},
 	"devDependencies": {
 		"@wordpress/scripts": "^27.9.0"
