--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "gsap": "^3.12.7",
     "splitting": "^1.1.0",
-    "swiper": "^11.2.4"
+    "swiper": "^11.2.4",
+    "three": "^0.174.0"
   }
 }
