--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   "dependencies": {
     "@wordpress/api-fetch": "^7.20.0",
     "animejs": "^4.0.1",
-    "gsap": "^3.12.7",
     "splitting": "^1.1.0",
-    "swiper": "^11.2.4",
-    "three": "^0.174.0"
+    "swiper": "^11.2.4"
   }
 }
