--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "build": "wp-scripts build",
     "start": "wp-scripts start",
-      "zip": "npm run build && cd .. && zip -r anima-wp-blocks.zip anima-wp-blocks -x \"anima-wp-blocks/node_modules/*\" \"anima-wp-blocks/src/*\" \"anima-wp-blocks/*.git*\" \"anima-wp-blocks/*.zip\" \"anima-wp-blocks/package.json\" \"anima-wp-blocks/package-lock.json\" \"anima-wp-blocks/blocks/*\" \"anima-wp-blocks/webpack.config.js\" \"anima-wp-blocks/.babelrc\" \"anima-wp-blocks/.gitignore\" \"anima-wp-blocks/.editorconfig\" \"anima-wp-blocks/.eslintrc.json\" \"anima-wp-blocks/.stylelintignore\" \"anima-wp-blocks/.stylelintrc.json\" \"anima-wp-blocks/README.md\""
-   
+    "zip": "npm run build && cd .. && zip -r anima-wp-blocks.zip anima-wp-blocks -x \"anima-wp-blocks/node_modules/*\" \"anima-wp-blocks/src/*\" \"anima-wp-blocks/*.git*\" \"anima-wp-blocks/*.zip\" \"anima-wp-blocks/package.json\" \"anima-wp-blocks/package-lock.json\" \"anima-wp-blocks/blocks/*\" \"anima-wp-blocks/webpack.config.js\" \"anima-wp-blocks/.babelrc\" \"anima-wp-blocks/.gitignore\" \"anima-wp-blocks/.editorconfig\" \"anima-wp-blocks/.eslintrc.json\" \"anima-wp-blocks/.stylelintignore\" \"anima-wp-blocks/.stylelintrc.json\" \"anima-wp-blocks/README.md\""
   },
   "dependencies": {
     "@wordpress/api-fetch": "^7.20.0",
     "animejs": "^4.0.1",
+    "jquery-ui-dist": "^1.13.3",
+    "react-draggable": "^4.4.6",
     "splitting": "^1.1.0",
     "swiper": "^11.2.4"
   }
